--- a/client/components/Home/HomeNav.module.scss
+++ b/client/components/Home/HomeNav.module.scss
@@ -17,3 +17,14 @@
     width: 100%;
     left: 0;
   }
+
+  .app__navbar {
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    position: fixed;
+    width: 100%;
+    margin: 0 auto;
+    z-index: 1000;
+  }
